# backup_win

./: README.md  backup.py  config copy.json  config.json  cosmx_md5sum.py  pyproject.toml  sftp_check_file.py  sftp_md5sum.py
backup_win/: cli.py  config.template.json  utils.py
data/df_run/: shuli.csv
data/output/20250107_023639/: checksum_diff.txt  md5sum_1.txt
data/output/20250107_030346/: md5sum.csv  md5sum_2.txt
data/test_1/folder/: different.txt
data/test_2/folder/: different.txt
src/: utils.py
