[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backup-win"
version = "0.1.0"
description = "A secure and reliable folder backup tool with intelligent time-based filtering"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
keywords = ["backup", "file management", "utility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Archiving :: Backup",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "ipykernel>=6.29.5",
    "rich>=14.0.0",
    "pathlib>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/backup-win"
Repository = "https://github.com/yourusername/backup-win.git"

[project.scripts]
backup-win = "backup_win.cli:main"
